# gossamer

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  README.md  SECURITY.md  SKILL.md  SPEC.md  deny.toml  exhaustive_test.sh  install.sh  mkdocs.yml  release.sh
crates/gossamer-ast/: Cargo.toml
crates/gossamer-ast/src/: common.rs  expr.rs  items.rs  lib.rs  node_id.rs  path.rs  pattern.rs  source_file.rs  stmt.rs  ty.rs
crates/gossamer-ast/tests/: round_trip.rs  smoke.rs  visitor.rs
crates/gossamer-binding/: Cargo.toml
crates/gossamer-binding/src/: conv.rs  lib.rs  macros.rs  native.rs  opaque.rs  registry.rs  sig.rs  types.rs
crates/gossamer-binding/tests/: install_into_interp.rs  macro_smoke.rs  native_export.rs
crates/gossamer-cli/: Cargo.toml  build.rs
crates/gossamer-cli/src/: binding_dispatch.rs  cli.rs  doc.rs  lib.rs  loaders.rs  main.rs  paths.rs  repl.rs  repl_helper.rs  style.rs
crates/gossamer-cli/tests/: aggregate_print_fallback.rs  cli.rs  dispatch_consistency.rs  format_precision_parity.rs  http_load.rs  memory_growth_bounded.rs  parity.rs  release_stability.rs  stdout_concurrent_print.rs
crates/gossamer-codegen-cranelift/: Cargo.toml
crates/gossamer-codegen-cranelift/src/: emit.rs  jit.rs  lib.rs  native.rs  native_symbols.rs
crates/gossamer-codegen-cranelift/tests/: codegen_correct.rs  emit.rs  jit.rs  native.rs
crates/gossamer-codegen-llvm/: Cargo.toml
crates/gossamer-codegen-llvm/src/: emit.rs  lib.rs  lower.rs  ty.rs
crates/gossamer-codegen-llvm/tests/: lower_smoke.rs
crates/gossamer-coro/: Cargo.toml
crates/gossamer-coro/src/: lib.rs
crates/gossamer-diagnostics/: Cargo.toml
crates/gossamer-diagnostics/src/: lib.rs  render.rs
crates/gossamer-diagnostics/tests/: fixtures_harness.rs  framework.rs
crates/gossamer-driver/: Cargo.toml
crates/gossamer-driver/src/: binding_runner.rs  build.rs  frontend_cache.rs  lib.rs  link.rs  pipeline.rs  target.rs
crates/gossamer-driver/tests/: binding_runner.rs  build_graph.rs  cross.rs  link.rs
crates/gossamer-hir/: Cargo.toml
crates/gossamer-hir/src/: ids.rs  lib.rs  lift.rs  lower.rs  tree.rs
crates/gossamer-hir/tests/: lower.rs
crates/gossamer-interp/: Cargo.toml
crates/gossamer-interp/src/: builtins.rs  bytecode.rs  compile.rs  env.rs  external_natives.rs  flag_set_builtins.rs  http_client_builtins.rs  interp.rs  jit_call.rs  lib.rs  regex_builtins.rs  value.rs  vm.rs
crates/gossamer-interp/tests/: eval.rs  for_range_matrix.rs  global_reassignment_dispatch.rs  http_end_to_end.rs  http_stress.rs  perf_baseline.rs  run_pass.rs  send.rs  value_roundtrip.rs  vm.rs  vm_jit.rs
crates/gossamer-lex/: Cargo.toml
crates/gossamer-lex/src/: comment.rs  cursor.rs  diagnostic.rs  lexer.rs  lib.rs  number.rs  punct.rs  source_map.rs  span.rs  string.rs  symbol.rs  token.rs
crates/gossamer-lex/tests/: throughput.rs  tokens.rs
crates/gossamer-lint/: Cargo.toml
crates/gossamer-lint/src/: explain.rs  fix.rs  lib.rs  lints.rs
crates/gossamer-lint/tests/: lints.rs
crates/gossamer-lsp/: Cargo.toml
crates/gossamer-lsp/src/: inlay.rs  lib.rs  navigation.rs  protocol.rs  semantic_tokens.rs  server.rs  session.rs  stdlib_index.rs  symbols.rs  workspace_index.rs
crates/gossamer-mir/: Cargo.toml
crates/gossamer-mir/src/: cleanup.rs  escape.rs  ir.rs  lib.rs  lower.rs  monomorph.rs  opt.rs
crates/gossamer-mir/tests/: lower.rs  semantics.rs
crates/gossamer-parse/: Cargo.toml
crates/gossamer-parse/src/: diagnostic.rs  expressions.rs  generics.rs  items.rs  lib.rs  parser.rs  patterns.rs  recovery.rs  statements.rs  stream.rs  types.rs  use_decls.rs
crates/gossamer-parse/tests/: smoke.rs
crates/gossamer-pkg/: Cargo.toml
crates/gossamer-pkg/src/: cache.rs  edit.rs  fetch.rs  id.rs  lib.rs  lockfile.rs  manifest.rs  resolver.rs  scaffold.rs  sha256.rs  tar.rs  transport.rs  version.rs
crates/gossamer-pkg/tests/: phase27.rs  phase28.rs  rust_bindings.rs  tarball_transport.rs
crates/gossamer-resolve/: Cargo.toml
crates/gossamer-resolve/src/: cfg.rs  def_id.rs  diagnostic.rs  external.rs  lib.rs  resolutions.rs  resolver.rs  scope.rs
crates/gossamer-resolve/tests/: smoke.rs
crates/gossamer-runner-template/: Cargo.toml
crates/gossamer-runner-template/src/: lib.rs
crates/gossamer-runner-template/templates/: Cargo.toml.tmpl  main.rs.tmpl  sigs_dump.rs.tmpl  staticlib_Cargo.toml.tmpl  staticlib_lib.rs.tmpl
crates/gossamer-runtime/: Cargo.toml  LAYOUT.md
crates/gossamer-runtime/src/: builtins.rs  c_abi.rs  ffi.rs  gc.rs  layout.rs  lib.rs  preempt.rs  race.rs  safe_env.rs  sched_global.rs  sigquit.rs  value.rs
crates/gossamer-runtime/tests/: arena.rs  coro_mn_stress.rs  layout.rs  shadow_roots.rs
crates/gossamer-sched/: Cargo.toml
crates/gossamer-sched/src/: channel.rs  lib.rs  multi.rs  poller.rs  queue.rs  scheduler.rs  select.rs  task.rs
crates/gossamer-sched/tests/: basic.rs  channel.rs  channel_drop_unparks.rs  multi.rs  pingpong.rs
crates/gossamer-std/: Cargo.toml  README.md
crates/gossamer-std/src/: blocking_pool.rs  bufio.rs  bytes.rs  collections.rs  compress.rs  context.rs  crypto.rs  encoding.rs  errors.rs  exec.rs  ffi.rs  flag.rs  fmt.rs  fs.rs  html.rs  http.rs  io.rs  json.rs  lib.rs  manifest.rs  mathrand.rs  net.rs  os.rs  panic.rs  path.rs  pprof.rs  regex.rs  registry.rs  runtime.rs  sched_global.rs  signal.rs  slog.rs  sort.rs  strconv.rs  strings.rs  sync.rs  testing.rs  text.rs  time.rs  tls.rs  (+2 more)
crates/gossamer-std/tests/: http_server.rs  phase22.rs  phase23.rs  phase24.rs  phase25.rs  phase26.rs
crates/gossamer-types/: Cargo.toml
crates/gossamer-types/src/: checker.rs  context.rs  error.rs  exhaustiveness.rs  infer.rs  lib.rs  printer.rs  subst.rs  table.rs  trait_index.rs  traits.rs  ty.rs
crates/gossamer-types/tests/: exhaustiveness.rs  smoke.rs  traits.rs  typeck.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/http_request/: chunked.txt  large_headers.txt  malformed.txt  methods.txt  (+1 more)
fuzz/fuzz_targets/: http_request.rs  lex.rs  manifest.rs  parse.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+345 files in other folders)
