[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workspace automation tasks for the Gossamer project."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
gossamer-lint = { workspace = true }
gossamer-std = { workspace = true }
