[package]
name = "gossamer-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-level IR for the Gossamer compiler."

[lints]
workspace = true

[dependencies]
gossamer-ast = { workspace = true }
gossamer-lex = { workspace = true }
gossamer-resolve = { workspace = true }
gossamer-types = { workspace = true }

[dev-dependencies]
gossamer-parse = { workspace = true }
