[package]
name = "gossamer-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Clippy-style lint engine for the Gossamer compiler."

[lints]
workspace = true

[dependencies]
gossamer-ast = { workspace = true }
gossamer-diagnostics = { workspace = true }
gossamer-lex = { workspace = true }

[dev-dependencies]
gossamer-parse = { workspace = true }
