[package]
name = "gossamer-runner-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "String templates for the per-project Cargo runner that statically links rust-bindings."

[lints]
workspace = true

[dependencies]

[dev-dependencies]
toml = { workspace = true }
syn = { version = "2", features = ["full", "parsing"] }
