[package]
name = "gossamer-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Runtime support library linked into every Gossamer program."

[lib]
crate-type = ["staticlib", "rlib"]

# The runtime crate exposes a C-ABI surface (`#[no_mangle] extern "C"`
# functions accepting raw pointers) so the native codegen can call
# it by name. That necessarily uses `unsafe`; the rest of the
# workspace keeps `unsafe_code = "forbid"`.
[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "deny"
too_many_lines = "warn"

[dependencies]
itoa = "1"
parking_lot = { workspace = true }
serde_json = { workspace = true }
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
flate2 = "1"
rustc-hash = "2"
