[package]
name = "gossamer-sched"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "M:N goroutine scheduler and network poller for the Gossamer runtime."

[lints]
workspace = true

[dependencies]
gossamer-runtime = { workspace = true }
