[package]
name = "gossamer-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Type checker and trait solver for the Gossamer compiler."

[lints]
workspace = true

[dependencies]
gossamer-ast = { workspace = true }
gossamer-diagnostics = { workspace = true }
gossamer-lex = { workspace = true }
gossamer-resolve = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
gossamer-parse = { workspace = true }
